adicionei mais uma linha

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -13,5 +13,7 @@
     commodi porro minus odit molestias. Rem inventore ducimus eaque?
     Totam, labore minus!</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, laudantium modi sed eius delectus officia illum exercitationem? Nisi sit velit aliquam, excepturi numquam a omnis corporis molestias reprehenderit illum eveniet.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+    <hr>
 </body>
 </html>
