teste de comit e push

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -14,6 +14,7 @@
     Totam, labore minus!</p>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati, laudantium modi sed eius delectus officia illum exercitationem? Nisi sit velit aliquam, excepturi numquam a omnis corporis molestias reprehenderit illum eveniet.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam, quidem.</p>
+    <p>teste de comit e push</p>
     <hr>
 </body>
 </html>
